--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -25,7 +25,10 @@ body {
   font-family: 'Signika', 'Arial', 'Tahoma', sans-serif;
 
 }
-
+.container {
+  width: 1175px;
+  margin: 0 auto;
+}
 /* signika-regular - latin */
 
 @font-face {
