--- a/src/sass/components/header.scss
+++ b/src/sass/components/header.scss
@@ -1,1 +1,97 @@
+// Main Header
+.main-header {
+  background-color:#ffff;
+}
+.nav {
+  display: flex;
+  justify-content: space-between;
+}
+.logo {
+  padding: 21px 0 12px 10px;
+}
+.nav__list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 604px;
+  list-style: none;
+  font-weight: 700;
+  padding: 23px 0 26px 0;
+}
+.nav__link {
+  text-decoration: none;
+  color: #000000;
+}
+.nav__cont {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 765px;
+}
+.nav__item--button {
+  display: block;
+  margin: 0;
+  border: none;
+  border-radius: 15px;
+  font-weight: 700;
+  width: 100px;
+  height: 28px;
+  color: #ffff;
+  background-color: #13a89e;
+  text-align: center;
+  cursor: pointer;
+}
+// Header Container
+.header-cont {
+    background:linear-gradient(to bottom left, rgb(101,56,146), rgb(180, 234, 231)), url("../img/team/background-min.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: auto;
+    background-position: center;
+}
+.left-block {
+  display: flex;
+  flex-direction: column;
+  width: 580px;
 
+}
+.left-block__title {
+  font-size: 60px;
+  color:#ffff;
+  margin-bottom: 38px;
+}
+.left-block__info {
+  font-size: 30px;
+  font-weight: 400;
+  color: #ffff;
+  margin-bottom: 60px;
+}
+.line-slider__text {
+  display: flex;
+  justify-content: space-between;
+  color: #ffff;
+  margin-bottom: 19px;
+  font-size: 18px;
+  font-weight:normal;
+}
+.quantity{
+  font-weight: 700;
+}
+.range-control {
+position:relative;
+display: flex;
+align-items: center;
+height: 80px;
+padding: 0 20px;
+background-color: transparent;
+overflow: hidden;
+}
+.scale {
+  flex:0 0 100%;
+  height: 4px;
+  background-color:#acacac;
+}
+.bar {
+  height: 4px;
+  background-color: #f8eb58;
+}
