--- a/src/sass/components/header.scss
+++ b/src/sass/components/header.scss
@@ -1,97 +1,295 @@
 // Main Header
 .main-header {
-  background-color:#ffff;
+  background-color: #ffff;
 }
+
 .nav {
   display: flex;
   justify-content: space-between;
-}
-.logo {
-  padding: 21px 0 12px 10px;
-}
-.nav__list {
-  display: flex;
-  justify-content: space-between;
   align-items: center;
-  width: 604px;
-  list-style: none;
-  font-weight: 700;
-  padding: 23px 0 26px 0;
+  padding: 20px 0;
+  max-width: 1175px;
+  margin: 0 auto;
+
+  &__link {
+    text-decoration: none;
+    color: #000000;
+  }
+
+  &__list {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 604px;
+    list-style: none;
+    font-weight: 700;
+  }
+
+  &__cont {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 765px;
+  }
+
+  &__item--button {
+    display: block;
+    margin: 0;
+    border: none;
+    border-radius: 15px;
+    font-weight: 700;
+    width: 100px;
+    height: 28px;
+    color: #ffff;
+    background-color: #13a89e;
+    text-align: center;
+    cursor: pointer;
+  }
 }
-.nav__link {
-  text-decoration: none;
-  color: #000000;
-}
-.nav__cont {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 765px;
-}
-.nav__item--button {
-  display: block;
-  margin: 0;
-  border: none;
-  border-radius: 15px;
-  font-weight: 700;
-  width: 100px;
-  height: 28px;
-  color: #ffff;
-  background-color: #13a89e;
-  text-align: center;
-  cursor: pointer;
-}
+
 // Header Container
 .header-cont {
-    background:linear-gradient(to bottom left, rgb(101,56,146), rgb(180, 234, 231)), url("../img/team/background-min.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: auto;
-    background-position: center;
+  background: linear-gradient(to bottom left, rgb(100, 57, 147), rgb(19, 168, 159));
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: auto;
+  background-position: center;
+  padding-bottom: 85px;
+
 }
+
+.blocks {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 75px;
+  width: 1120px;
+  margin: 0 auto;
+}
+
+// Left Block
+
 .left-block {
   display: flex;
   flex-direction: column;
-  width: 580px;
+  width: 560px;
 
+  &__title {
+    font-size: 60px;
+    color: #ffff;
+    margin-bottom: 38px;
+  }
+
+  &__info {
+    font-size: 30px;
+    font-weight: 400;
+    color: #ffff;
+    margin-bottom: 60px;
+  }
 }
-.left-block__title {
-  font-size: 60px;
-  color:#ffff;
-  margin-bottom: 38px;
-}
-.left-block__info {
-  font-size: 30px;
-  font-weight: 400;
-  color: #ffff;
-  margin-bottom: 60px;
-}
+
 .line-slider__text {
   display: flex;
   justify-content: space-between;
   color: #ffff;
   margin-bottom: 19px;
   font-size: 18px;
-  font-weight:normal;
+  font-weight: normal;
 }
-.quantity{
+
+.quantity {
   font-weight: 700;
 }
+
 .range-control {
-position:relative;
-display: flex;
-align-items: center;
-height: 80px;
-padding: 0 20px;
-background-color: transparent;
-overflow: hidden;
+  position: relative;
+  display: flex;
+  align-items: center;
+  height: 18px;
+  background-color: transparent;
+  overflow: hidden;
+  margin-bottom: 11px;
 }
+
 .scale {
-  flex:0 0 100%;
+  flex: 0 0 100%;
   height: 4px;
-  background-color:#acacac;
+  background-color: #acacac;
 }
+
 .bar {
   height: 4px;
-  background-color: #f8eb58;
+  background-color: #ffe633;
+}
+
+.line-toggle-min {
+  display: inline-block;
+  position: absolute;
+  top: 50%;
+  left: 50px;
+  transform: translateY(-50%);
+  width: 18px;
+  height: 18px;
+  border-radius: 50%;
+  cursor: pointer;
+  background-color: #ffe633;
+}
+
+.line-toggle-max {
+  display: inline-block;
+  position: absolute;
+  top: 50%;
+  right: 139px;
+  transform: translateY(-50%);
+  width: 18px;
+  height: 18px;
+  border-radius: 50%;
+  cursor: pointer;
+  background-color: #ffe633;
+}
+
+.seasons {
+  display: flex;
+  justify-content: space-between;
+  font-size: 18px;
+  color: #fff;
+  margin-bottom: 60px;
+
+  &__start {
+    padding-left: 34px;
+  }
+
+  &__end {
+    padding-right: 118px;
+  }
+
+}
+
+
+
+.left-block__socials {
+  display: flex;
+  list-style: none;
+
+  & li:nth-child(-n+3) {
+    margin-right: 40px;
+  }
+
+  & svg {
+    width: 32px;
+    height: 32px;
+    fill: #ffe633;
+
+  }
+}
+
+// Right Block
+
+.right-block {
+  display: flex;
+  width: 481px;
+  min-height: 544px;
+  background: linear-gradient(to right, #4b6f9a, #613c90);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  box-shadow: 0px 6px 14.72px 1.28px rgba(0, 0, 0, 0.2);
+}
+
+.title-position {
+  display: flex;
+  flex-direction: column;
+  padding-top: 58px;
+}
+
+.text-position {
+  margin-bottom: 50px;
+}
+
+.right-block__title {
+  font-size: 36px;
+  color: #fff;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 36px;
+}
+
+.right-block__info {
+  font-size: 24px;
+  color: #fff;
+  font-weight: 400;
+  text-align: center;
+}
+
+.trigger {
+  display: flex;
+  justify-content: space-around;
+  list-style: none;
+  margin-bottom: 36px;
+}
+
+.trigger__item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #fff;
+  width: 88px;
+  height: 88px;
+  font-size: 36px;
+  font-weight: bold;
+}
+
+.trigger__item--ocupation {
+  text-align: center;
+  color: #ffff;
+  font-size: 18px;
+  padding-top: 10px;
+}
+
+.right-block__conv {
+  text-align: center;
+  font-size: 30px;
+  color: #ffff;
+  font-weight: bold;
+  margin-bottom: 15px;
+}
+
+.right-block__acc {
+  text-align: center;
+  font-size: 24px;
+  color: #ffff;
+  font-weight: normal;
+  margin-bottom: 35px;
+}
+
+.img-currency {
+  font-size: 24px;
+  text-transform: uppercase;
+  color: #fff;
+}
+
+.img-currency:before {
+  display: inline-block;
+  margin-bottom: -15px;
+  width: 28px;
+  height: 46px;
+  content: '';
+  background-image: url('../images/layer.png');
+  margin-right: 5px;
+}
+
+.right-bloc__button {
+  display: block;
+  margin: 0 auto;
+  margin-bottom:44px;
+  width: 235px;
+  height: 60px;
+  border: none;
+  border-radius: 30px;
+  background-color: #ffe633;
+  color: #000000;
+  text-align: center;
+  font-size: 24px;
+  font-weight: bold;
+  cursor: pointer;
 }
