--- a/src/sass/components/main.scss
+++ b/src/sass/components/main.scss
@@ -46,8 +46,8 @@
 }
 
 .img-wrapper {
-  margin: 0 auto;
   position: relative;
+  left: 250px;
   width: 837px;
   height: 432px;
   box-shadow: 0px 6px 14.72px 1.28px rgba(0, 0, 0, 0.2);
@@ -71,19 +71,18 @@
 }
 
 .problem {
-  margin: 0 auto;
-  padding: 50px 0 0 60px;
+  position: relative;
+  left: 189px;
   width: 661px;
   height: 428px;
   background: linear-gradient(to right, #4d6f9b, #1ba09e);
+  padding: 50px 200px 0 60px;
   box-shadow: 0px 3px 14.72px 1.28px rgba(0, 0, 0, 0.35);
 }
 
 .problem__list {
   list-style: none;
 }
-
-
 
 .problem__title {
   margin-bottom: 50px;
@@ -94,8 +93,10 @@
 }
 
 .problem__item {
-margin-bottom: 42px;
-color: #fff;
+  margin-bottom: 42px;
+  color: #fff;
+  position: relative;
+  padding-left: 20px;
 }
 
 .problem__item:nth-last-child(1) {
@@ -104,8 +105,197 @@ color: #fff;
 
 .problem__item::before {
   content: '●';
-  padding-right: 20px;;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
   color: #ffe633;
 }
 
+.solution {
+  z-index: 10;
+  position: absolute;
+  padding: 68px 112px 0 84px;
+  ;
+  top: 50%;
+  right: -66%;
+  transform: translateY(-50%);
+  width: 602px;
+  height: 352px;
+  box-shadow: 0px 3px 16px 0px rgba(0, 0, 0, 0.35);
+  background-color: #fff;
+}
 
+.solution__title {
+  margin-bottom: 38px;
+  font-size: 30px;
+  line-height: 36px;
+  font-weight: bold;
+}
+
+.solution__description {
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 29px;
+  margin-bottom: 26px;
+}
+
+.solution__button {
+  border: none;
+  background-color: #ffe633;
+  color: #fff;
+  font-weight: bold;
+  border-radius: 20px;
+  ;
+  padding: 10px 30px;
+  cursor: pointer;
+
+}
+
+// -------------------------------
+
+.key-benefits__container {
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 713px;
+  margin-bottom: 162px;
+}
+
+.title-one {
+  width: 310px;
+  height: auto;
+}
+
+.title-one:not(:nth-child(n+3)) {
+margin-bottom: 64px;
+}
+
+.title {
+  list-style: none;
+  padding-left: 21px;
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 32px;
+}
+
+.first-title {
+  flex-wrap: wrap;
+  list-style: none;
+}
+
+.first-title__text {
+  width: 310px;
+  position: relative;
+  padding-left: 60px;
+  font-size: 18px;
+  font-weight: regular;
+  margin-bottom: 38px;
+
+  &:last-of-type {
+    margin-bottom: 0;
+  }
+}
+
+.papers,
+.chart {
+  padding-right: 60px;
+}
+
+.first-title__text::before {
+  position: absolute;
+  display: inline-block;
+  top: 0;
+  left: 0;
+  content: '';
+  width: 32px;
+  height: 32px;
+}
+
+.target:before {
+  background-image: url('../images/bgsvg/target.svg');
+}
+
+.balance::before {
+  background-image: url('../images/bgsvg/balance.svg');
+}
+
+.wallet::before {
+  background-image: url('../images/bgsvg/wallet.svg');
+}
+
+.avatar::before {
+  background-image: url('../images/bgsvg/avatar.svg');
+}
+
+.economic::before {
+  background-image: url('../images/bgsvg/economic.svg');
+}
+
+.brainstorm::before {
+  background-image: url('../images/bgsvg/brainstorm.svg');
+}
+
+.blank::before {
+  background-image: url('../images/bgsvg/blank.svg');
+}
+
+.papers::before {
+  background-image: url('../images/bgsvg/papers.svg');
+}
+
+.chart::before {
+  background-image: url('../images/bgsvg/chart.svg');
+}
+
+// ---------------------------------
+
+.whitepaper {
+  margin-bottom: 184px;
+}
+
+.list-container {
+  margin: 0 auto;
+  width: 752px;
+}
+
+.whitepaper__list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.whitepaper__item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 175px;
+  border-radius: 20px;
+}
+
+.whitepaper__item:not(:nth-child(3n)) {
+  margin-right: 113px;
+}
+
+.whitepaper__item:not(:nth-child(n+4)) {
+  margin-bottom: 60px;
+}
+
+.whitepaper__img {
+  box-shadow: 0px 3px 14.72px 1.28px rgba(0, 0, 0, 0.35);
+  border-radius: 50%;
+  margin-bottom: 34px;
+
+}
+
+.whitepaper__button {
+  padding: 8px 30px;
+  box-shadow: 1px 1px 9px 0.08px rgba(0, 0, 0, 0.09);
+  display: block;
+  border: none;
+  background-color: #fff;
+  border-radius: 20px;
+  font-weight: bold;
+  cursor: pointer;
+
+}
