Full Modified Header

--- a/src/sass/helpers/mixins.scss
+++ b/src/sass/helpers/mixins.scss
@@ -1,1 +1,35 @@
+@mixin flex($type: 'all') {
+  display: flex;
 
+  @if $type=='all' {
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  @else if $type=='hor' {
+    justify-content: center;
+  }
+
+  @else if $type=='ver' {
+    align-items: center;
+  }
+
+  @else if $type=='arround' {
+    justify-content: space-around;
+  }
+
+  @else if $type=='between' {
+    justify-content: space-between;
+  }
+}
+
+@mixin center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@mixin column {
+  display: flex;
+  flex-direction: column;
+}
