--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -7,5 +7,7 @@
 @import './base';
 
 // Components
-@import './components/header';
-@import './components/main';
+@import './components/main-header';
+@import './components/header-container';
+@import './components/left-block';
+@import './components/right-block';
