--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -1,37 +1,23 @@
 html {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+  @include box-sizing(border-box);
 }
 
 *,
 *::before,
 *::after {
-  -webkit-box-sizing: inherit;
-  box-sizing: inherit;
+  @include box-sizing(inherit);
 }
 
 * {
-  margin: 0;
-  padding: 0;
+  @extend %global;
 }
 
 img {
-  display: block;
-  max-width: 100%;
-  height: auto;
+  @extend %img;
 }
 
 .container {
-  max-width: 1365px;
-  margin: 0 auto;
-}
-
-body {
-  font-family: 'Signika', 'Arial', 'Tahoma', sans-serif;
-  font-size: 18px;
-  line-height: 22px;
-  color: #000;
-
+  @extend %container;
 }
 
 /* signika-regular - latin */
