--- a/src/sass/helpers/mixins.scss
+++ b/src/sass/helpers/mixins.scss
@@ -1,1 +1,18 @@
+@mixin box-sizing($type)
+ {
+ -webkit-box-sizing:$type;
+ -moz-box-sizing:$type;
+ box-sizing:$type;
+ }
 
+ @mixin box-sizing($type)
+ {
+ -webkit-box-sizing:$type;
+ -moz-box-sizing:$type;
+ box-sizing:$type;
+ }
+
+//  @mixin font-size($size) {
+//   font-size:$size;
+// font-size: ($size / 16px) * 1rem;
+// }
