Full modified header v2

--- a/src/sass/components/left-block.scss
+++ b/src/sass/components/left-block.scss
@@ -17,7 +17,7 @@
 }
 
 .line-slider__text {
-  @include flex ('arround');
+  @include flex ('between');
   color: $text-color;
   margin-bottom: 1.1875rem;
   font-size: $font-size;
