add merge test project

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -15,3 +15,6 @@
 @import './components/problem-solutins';
 @import './components/key-benefits';
 @import './components/whitepaper';
+
+// max-width: 1023px - tablet
+// max-width: 767px - mobile
