--- a/src/sass/components/about-us.scss
+++ b/src/sass/components/about-us.scss
@@ -58,7 +58,7 @@
   position: relative;
   left: 15.625rem;
   max-width: 52.3125rem;
-  height: 27rem;
+  height: auto;
   box-shadow: 0px 6px 14.72px 1.28px rgba(0, 0, 0, 0.2);
 
   &::before {
