--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -21,7 +21,7 @@ img {
   height: auto;
 }
 .container {
-  width: 1365px;
+  max-width: 1365px;
   margin: 0 auto;
 }
 /* signika-regular - latin */
