--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -11,3 +11,4 @@
 @import './components/header-container';
 @import './components/left-block';
 @import './components/right-block';
+@import './components/media'
