--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -16,6 +16,10 @@ img {
   @extend %img;
 }
 
+picture {
+  @extend %picture;
+}
+
 body {
   font-family: $main-font;
   font-size: $font-size;
@@ -32,8 +36,10 @@ body {
   font-style: normal;
   font-weight: 400;
   src: local('Signika Regular'), local('Signika-Regular'),
-       url('../fonts/signika-v10-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-       url('../fonts/signika-v10-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+    url('../fonts/signika-v10-latin-regular.woff2') format('woff2'),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+    url('../fonts/signika-v10-latin-regular.woff') format('woff');
+  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
 /* signika-700 - latin */
@@ -43,8 +49,10 @@ body {
   font-style: normal;
   font-weight: 700;
   src: local('Signika Bold'), local('Signika-Bold'),
-       url('../fonts/signika-v10-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-       url('../fonts/signika-v10-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+    url('../fonts/signika-v10-latin-700.woff2') format('woff2'),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+    url('../fonts/signika-v10-latin-700.woff') format('woff');
+  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
 // Ebrima
@@ -52,8 +60,10 @@ body {
 @font-face {
   font-family: "Ebrima";
 
-  src: url("../fonts/ebrima.woff") format("woff"), /* Modern Browsers */
-    url("../fonts/ebrima.woff2") format("woff2"); /* Modern Browsers */
+  src: url("../fonts/ebrima.woff") format("woff"),
+    /* Modern Browsers */
+    url("../fonts/ebrima.woff2") format("woff2");
+  /* Modern Browsers */
   font-weight: normal;
   font-style: normal;
 }
