--- a/src/sass/components/about-us.scss
+++ b/src/sass/components/about-us.scss
@@ -3,8 +3,7 @@
 
   &__img {
     background-size: cover;
-    max-width: 52.3125rem;
-    height: 27rem;
+    max-width: 100%;
   }
 }
 
@@ -58,7 +57,6 @@
   position: relative;
   left: 15.625rem;
   max-width: 52.3125rem;
-  height: auto;
   box-shadow: 0px 6px 14.72px 1.28px rgba(0, 0, 0, 0.2);
 
   &::before {
@@ -69,8 +67,62 @@
     transform: translateX(-50%);
     display: block;
     background: url(../images/bgsvg/play.svg) center no-repeat;
-    width: 16.25rem;
+    min-width: 16.25rem;
     height: 16.25rem;
     content: '';
+    cursor: pointer;
+  }
+}
+
+@media(max-width: 1199px) {
+  .container {
+    max-width: 48rem;
+  }
+
+  .section__title {
+    text-align: center;
+    padding-left: 0;
+
+    &::before {
+      top: -70px;
+      left: 50%;
+      transform: translateX(-50%)
+    }
+  }
+
+
+
+  .img-wrapper {
+    margin: 0 auto;
+    left: 0;
+  }
+
+}
+
+@media(max-width: 767px) {
+
+  .container {
+    max-width: 20rem;
+  }
+
+  .section__title {
+    text-align: center;
+    padding-left: 0;
+
+    &::before {
+      top: -70px;
+      left: 50%;
+      transform: translateX(-50%)
+    }
+  }
+
+  .img-wrapper {
+    margin: 0 auto;
+    left: 0;
+
+    &::before {
+      width: 7rem;
+      height: 7rem;
+    }
   }
 }
