--- a/src/sass/helpers/placeholder.scss
+++ b/src/sass/helpers/placeholder.scss
@@ -5,11 +5,15 @@
 }
 
 %container {
-  max-width: 1365px;
+  max-width: 85.3125rem;
   margin: 0 auto;
 }
 
 %global {
   margin: 0;
   padding: 0;
+}
+
+%picture {
+  display: block;
 }
