add changes to styles.scss

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -9,6 +9,7 @@
 // Components
 @import './components/main-header';
 @import './components/header-container';
+@import './components/media';
 @import './components/left-block';
 @import './components/right-block';
 @import './components/about-us';
