add responsive changes to header

--- a/src/sass/components/header-container.scss
+++ b/src/sass/components/header-container.scss
@@ -3,7 +3,6 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  width: 100%;
-  min-width: 600px;
+  max-width: 100%;
   padding-bottom: 5.3125rem;
 }
