--- a/src/sass/components/right-block.scss
+++ b/src/sass/components/right-block.scss
@@ -1,6 +1,6 @@
 .right-block {
   display: flex;
-  width: 30.0625rem;
+  max-width: 30.0625rem;
   min-height: 34rem;
   background: linear-gradient(to right, #4b6f9a, #613c90);
   background-repeat: no-repeat;
