--- a/src/sass/components/right-block.scss
+++ b/src/sass/components/right-block.scss
@@ -1,7 +1,6 @@
 .right-block {
-  display: flex;
-  max-width: 30.0625rem;
-  min-height: 34rem;
+  width: 30.0625rem;
+  min-height: auto;
   background: linear-gradient(to right, #4b6f9a, #613c90);
   background-repeat: no-repeat;
   background-size: cover;
@@ -13,6 +12,7 @@
     font-weight: bold;
     text-align: center;
     margin-bottom: 2.25rem;
+    padding-top:58px;
   }
   &__info {
     font-size: 1.5rem;
@@ -52,16 +52,9 @@
 
 }
 
-.title-position {
-  @include column;
-  padding-top: 3.625rem;
-}
-
 .text-position {
   margin-bottom: 3.125rem;
 }
-
-
 
 .trigger {
   @include flex ('arround');
