--- a/src/sass/components/right-block.scss
+++ b/src/sass/components/right-block.scss
@@ -50,6 +50,11 @@
     cursor: pointer;
   }
 
+  &__button:hover {
+    color: #fff;
+    background-color: $button-color;
+  }
+
 }
 
 .text-position {
