--- a/src/sass/components/problem-solutins.scss
+++ b/src/sass/components/problem-solutins.scss
@@ -54,7 +54,7 @@
   transform: translateY(-50%);
   max-width: 37.625rem;
   height: 22rem;
-  box-shadow: 0px 3px 16px 0px rgba(0, 0, 0, 0.35);
+  box-shadow: 0px 0.1875rem 1rem 0px rgba(0, 0, 0, 0.35);
   background-color: #fff;
 
   &__title {
@@ -74,14 +74,18 @@
   &__button {
     display: block;
     border: none;
-    background-color: #ffe633;
+    background-color: $main-color;
     color: #fff;
     font-weight: bold;
     border-radius: 1.25rem;
-    ;
     padding: 0.625rem 1.875rem;
     cursor: pointer;
   }
+
+  &__button:hover {
+    background-color: $button-color;
+  }
+
 }
 
 // ============================TABLET MEDIA==================================
@@ -92,7 +96,7 @@
   }
 
   .problem-solutions {
-    padding: 12rem 0 28rem 0;
+    padding: 0 0 28rem 0;
   }
 
   .problem {
@@ -102,7 +106,7 @@
 
   .solution {
     top: 50%;
-    right: 30px;
+    right: 1.875rem;
     transform: translateY(50%);
 
 
@@ -157,10 +161,10 @@
     transform: translateY(50%);
     max-width: 90%;
     height: auto;
-    padding: 10px 5px 10px 5px;
+    padding: 0.625rem 0.3125rem;
 
     &__title {
-      margin-bottom: 32px;
+      margin-bottom: 2rem;
     }
 
     &__description {
