--- a/src/sass/components/whitepaper.scss
+++ b/src/sass/components/whitepaper.scss
@@ -43,6 +43,12 @@
     font-weight: bold;
     cursor: pointer;
   }
+
+  &__button:hover {
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    background-color:  $main-color;
+    color: #fff;
+  }
 }
 
 // ========================MOBILE MEDIA============================
@@ -55,24 +61,24 @@
   .whitepaper {
     padding: 12rem 0 3.75rem 0;
 
-  &__list {
-    display: flex;
-    flex-wrap: no-wrap;
-    flex-direction: column;
-    align-content: center;
-  }
+    &__list {
+      display: flex;
+      flex-wrap: no-wrap;
+      flex-direction: column;
+      align-content: center;
+    }
 
-  &__item {
-    display: flex;
-    flex-direction: column;
-  }
+    &__item {
+      display: flex;
+      flex-direction: column;
+    }
 
-  &__item:not(:nth-child(3n)) {
-    margin-right: 0px;
-  }
+    &__item:not(:nth-child(3n)) {
+      margin-right: 0px;
+    }
 
-  &__item:not(:nth-child(n+6)) {
-    margin-bottom: 3.75rem;
+    &__item:not(:nth-child(n+6)) {
+      margin-bottom: 3.75rem;
+    }
   }
-}
 }
