--- a/src/sass/components/right-block.scss
+++ b/src/sass/components/right-block.scss
@@ -1,4 +1,5 @@
 .right-block {
+  padding: 3.625rem 1.5rem 2.75rem;
   width: 30.0625rem;
   min-height: auto;
   background: linear-gradient(to right, #4b6f9a, #613c90);
@@ -6,13 +7,13 @@
   background-size: cover;
   background-position: center;
   box-shadow: 0px 6px 14.72px 1.28px rgba(0, 0, 0, 0.2);
+
   &__title {
     font-size:2.25rem;
     color: $text-color;
     font-weight: bold;
     text-align: center;
     margin-bottom: 2.25rem;
-    padding-top:58px;
   }
   &__info {
     font-size: 1.5rem;
@@ -37,7 +38,6 @@
   &__button {
     display: block;
     margin: 0 auto;
-    margin-bottom:2.75rem;
     width: 14.6875rem;
     height: 3.75rem;
     border: none;
@@ -62,7 +62,7 @@
 }
 
 .trigger {
-  @include flex ('arround');
+  @include flex ('between');
   list-style: none;
   margin-bottom: 2.25rem;
   &__item {
