add class to left-block__socials child (li,a,svg). add beautify style (animation, scale, rotate,hover, focus etc.)

--- a/src/sass/components/about-us.scss
+++ b/src/sass/components/about-us.scss
@@ -72,10 +72,12 @@
     border-radius: 50%;
     content: '';
     cursor: pointer;
+    margin: 0 auto;
 
   }
 
-  &:hover::before {
+  &:hover::before,
+  &:focus::before{
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
     transition: ease-in-out 1s;
   }
