--- a/src/sass/components/problem-solutins.scss
+++ b/src/sass/components/problem-solutins.scss
@@ -82,8 +82,11 @@
     cursor: pointer;
   }
 
-  &__button:hover {
+  &__button:hover,
+  &__button:focus {
     background-color: $button-color;
+    transform: scale(1.1);
+    transition: ease-in-out 1s;
   }
 
 }
