--- a/src/sass/components/main-header.scss
+++ b/src/sass/components/main-header.scss
@@ -2,6 +2,12 @@
   background-color: $text-color;
 }
 
+.logo:hover,
+.logo:focus {
+transform: scale(1.1);
+transition: ease-in-out 1s;
+}
+
 .nav {
   display: flex;
   justify-content: space-between;
@@ -21,14 +27,45 @@
   }
 
   &__link {
+    padding: 0 1.25rem;
     text-decoration: none;
     color: $second-color;
+    display: block;
   }
 
-  &__link:hover {
+  &__item:nth-child(6) &__link {
+    padding-right: 0;
+  }
+
+  &__item:nth-child(1) &__link {
+    padding-left: 0;
+  }
+
+  &__link:hover,
+  &__link:focus {
     background: linear-gradient(to right, #ffe633, #45769b);
     background-clip: text;
     -webkit-text-fill-color: transparent;
+    animation: shake 0.8s;
+    backface-visibility: hidden;
+  }
+
+  @keyframes shake {
+    10%, 90% {
+      transform: translate3d(-1px, 0, 0);
+    }
+
+    20%, 80% {
+      transform: translate3d(2px, 0, 0);
+    }
+
+    30%, 50%, 70% {
+      transform: translate3d(-4px, 0, 0);
+    }
+
+    40%, 60% {
+      transform: translate3d(4px, 0, 0);
+    }
   }
 
   &__list {
@@ -51,7 +88,8 @@
     cursor: pointer;
   }
 
-  &__item--button:hover {
+  &__item--button:hover,
+  &__item--button:focus {
     background: linear-gradient(to right, #ffe633, #45769b);
     transition: ease-in-out 3s;
   }
