--- a/src/sass/components/media.scss
+++ b/src/sass/components/media.scss
@@ -13,7 +13,10 @@
     &__item {
       font-size: 0.875rem;
       margin-bottom: 0.3125rem;
+    }
 
+    &__link {
+      padding: 0;
     }
 
     &__cont {
